--- a/_posts/2016-12-13-isobands.md
+++ b/_posts/2016-12-13-isobands.md
@@ -11,7 +11,7 @@ Calculating these isobands can be a bit difficult, that's why I adapted the [Mar
 
 <iframe frameborder="no" border="0" scrolling="no" marginwidth="0" marginheight="0" width="690" height="510" src="{{ site.baseurl }}/code_samples/isobands.html"></iframe>
 
-The important code parts are there. You can find [the whole code here]({{ site.baseurl }}/code_samples/isobands.html).
+The important code parts are there. You can find [the whole code here]({{ site.baseurl }}/code_samples/isobands-page.html).
 
 {% highlight js %}
 var projection = d3.geoAzimuthalEqualArea()
@@ -61,3 +61,21 @@ bandsTemp.features.forEach(function(d, i) {
 
 * Call the function *isobands* of the [raster-marching-squares](https://github.com/rveciana/raster-marching-squares) library
 * The color scale is taken from the d3 library setting a [scaleSequential](https://github.com/d3/d3-scale#sequential-scales) with the minimum and maximum values we want to show
+
+### SVG
+
+Using an SVG can be useful if we want the user to know the band value by selecting it, for instance.
+
+The code is similar to the one at the Canvas version. You can find [the whole code here]({{ site.baseurl }}/code_samples/isobands-svg-page.html).
+
+The most important part is:
+
+{% highlight js %}
+bandsTemp.features.forEach(function(d, i) {
+  svg.insert("path", ".streamline")
+      .datum(d)
+      .attr("d", path)
+      .style("fill", colorScale(intervalsTemp[i]))
+      .style("stroke", "None");
+});
+{% endhighlight %}
