SVG version for isolines done

--- a/_posts/2016-12-13-isolines.md
+++ b/_posts/2016-12-13-isolines.md
@@ -6,4 +6,48 @@ date: 2016-12-13 21:10:09
 disqus: 1
 ---
 
+The isolines connect the points with the same value in the raster. It's widely used since is easy to understand and can be drawn on the top of [isobands]({{ site.baseurl }}{% post_url 2016-12-13-isobands %}) or [other raster representations]({{ site.baseurl }}{% post_url 2016-12-07-drawing-raster-data %}).
 
+Calculating these isolines can be a bit difficult, that's why I adapted the [MarchingSquares.js](https://github.com/RaumZeit/MarchingSquares.js) library to use with a [geoPath](https://github.com/d3/d3-geo#paths): [raster-marching-squares](https://github.com/rveciana/raster-marching-squares)
+
+<iframe frameborder="no" border="0" scrolling="no" marginwidth="0" marginheight="0" width="690" height="510" src="{{ site.baseurl }}/code_samples/isolines.html"></iframe>
+
+The important code parts are these. You can find [the whole code here]({{ site.baseurl }}/code_samples/isolines-page.html).
+
+* The raster is read as explained in the [reading raster data]({{ site.baseurl }}{% post_url 2016-12-07-reading-raster-data %}) section
+
+{% highlight js %}
+var intervalsZ = [1400, 1420, 1440, 1460, 1480, 1500, 1520, 1540];
+var bandsTemp = rastertools.isolines(zData, geoTransform, intervalsZ);
+var colorScale = d3.scaleSequential(d3.interpolateYlOrRd)
+    .domain([1400, 1540]);
+bandsTemp.features.forEach(function(d, i) {
+    context.beginPath();
+    context.globalAlpha = 1;
+    context.lineWidth = 2;
+    context.strokeStyle = colorScale(intervalsZ[i]);
+    path(d);
+    context.stroke();
+});
+{% endhighlight %}
+
+* The  [raster-marching-squares](https://github.com/rveciana/raster-marching-squares) *isolines* function is called with the raster data, the [geoTransform]({{ site.baseurl }}{% post_url 2016-12-07-geotransform %}) and an array with the intervals
+* For each of the generated lines, a *canvas path* is drawn. I've colored the lines to show how to do it, although the most frequent case is drawing black or dark grey lines over other data
+
+### SVG
+
+The SVG version is very similar, in this case. You can find [the whole code here]({{ site.baseurl }}/code_samples/isolines-page.html).
+
+The main change is:
+
+{% highlight js %}
+bandsTemp.features.forEach(function(d, i) {
+  svg.insert("path", ".streamline")
+      .datum(d)
+      .attr("d", path)
+      .style("fill", colorScale(intervalsTemp[i]))
+      .style("stroke", "None");
+});
+{% endhighlight %}
+
+* Of course, the difference is that the line is drawn appending paths to the SVG
