--- a/_posts/2016-12-13-isobands.md
+++ b/_posts/2016-12-13-isobands.md
@@ -11,7 +11,7 @@ Calculating these isobands can be a bit difficult, that's why I adapted the [Mar
 
 <iframe frameborder="no" border="0" scrolling="no" marginwidth="0" marginheight="0" width="690" height="510" src="{{ site.baseurl }}/code_samples/isobands.html"></iframe>
 
-The important code parts are there. You can find [the whole code here]({{ site.baseurl }}/code_samples/isobands-page.html).
+The important code parts are these. You can find [the whole code here]({{ site.baseurl }}/code_samples/isobands-page.html).
 
 {% highlight js %}
 var projection = d3.geoAzimuthalEqualArea()
