isolines with labels canvas example added

--- a/_posts/2016-12-13-isolines.md
+++ b/_posts/2016-12-13-isolines.md
@@ -51,3 +51,10 @@ bandsTemp.features.forEach(function(d, i) {
 {% endhighlight %}
 
 * Of course, the difference is that the line is drawn appending paths to the SVG
+
+Adding labels
+-------------
+
+Isolines without labels are very difficult to understand. Adding labels is quite difficult, specially using *Canvas*. Canvas hasn't got any function to know the position of the path in certain length, nor the angle. That's why I created [the svg-path-properties library](https://github.com/rveciana/svg-path-properties), that does exactly that.
+
+<iframe frameborder="no" border="0" scrolling="no" marginwidth="0" marginheight="0" width="690" height="510" src="{{ site.baseurl }}/code_samples/isolines-labels.html"></iframe>
