Labels and Canvas explanation done

--- a/_posts/2016-12-13-isolines.md
+++ b/_posts/2016-12-13-isolines.md
@@ -36,7 +36,7 @@ bandsTemp.features.forEach(function(d, i) {
 
 ### SVG
 
-The SVG version is very similar, in this case. You can find [the whole code here]({{ site.baseurl }}/code_samples/isolines-page.html).
+The SVG version is very similar, in this case. You can find [the whole code here]({{ site.baseurl }}/code_samples/isolines-svg-page.html).
 
 The main change is:
 
@@ -58,3 +58,52 @@ Adding labels
 Isolines without labels are very difficult to understand. Adding labels is quite difficult, specially using *Canvas*. Canvas hasn't got any function to know the position of the path in certain length, nor the angle. That's why I created [the svg-path-properties library](https://github.com/rveciana/svg-path-properties), that does exactly that.
 
 <iframe frameborder="no" border="0" scrolling="no" marginwidth="0" marginheight="0" width="690" height="510" src="{{ site.baseurl }}/code_samples/isolines-labels.html"></iframe>
+You can find [the whole code here]({{ site.baseurl }}/code_samples/isolines-labels-page.html).
+
+As you can see in the image, the isoline behind each label is erased. But under this label there is a background. This effect is not possible to achieve using Canvas, so a hidden canvas is created, where erasing is not a problem. Once the isolines and labels layer is done, is combined with the background:
+
+{% highlight js %}
+var hiddenCanvas = d3.select("body").append("canvas")
+      .attr("width", width)
+      .attr("height", height)
+      .attr("id", "hiddenCanvas")
+      .style("display","none");
+var hiddenContext = hiddenCanvas.node().getContext("2d");
+
+var hiddenPath = d3.geoPath()
+    .projection(projection).context(hiddenContext);
+var hiddenPath2 = d3.geoPath()
+        .projection(projection);
+{% endhighlight %}
+
+* The hidden canvas needs a context, and since the *geoPath* needs a context too, a new one is createLinearGradient
+* Another *geoPath*, this time without context, is created to be past to [the svg-path-properties library](https://github.com/rveciana/svg-path-properties)
+
+{% highlight js %}
+var properties = spp.svgPathProperties(hiddenPath2(d));
+var separation = 150;
+
+for(var j = 0; j< Math.floor(properties.getTotalLength()/separation); j++){
+  var pos = properties.getPropertiesAtLength(75 + separation*j);
+
+  var degrees = Math.atan(pos.tangentY/pos.tangentX);
+  var text = d.properties[0].value;
+  hiddenContext.save();
+
+  hiddenContext.translate(pos.x, pos.y);
+  hiddenContext.rotate(degrees);
+
+  hiddenContext.font="15px Georgia";
+
+  hiddenContext.clearRect(-2-hiddenContext.measureText(text).width/2 , -8, 4 + hiddenContext.measureText(text).width, 19);
+  hiddenContext.fillStyle = "#500";
+  hiddenContext.fillText(text, -hiddenContext.measureText(text).width/2, 7.5);
+  hiddenContext.restore();
+}
+{% endhighlight %}
+
+* After drawing the isoline, that's how the labels are drawing
+* We will draw many labels, one each 150 px with the *for* statement
+  * If not, sine the isoline can be split in several isolines, some large parts could be unlabeled
+* The label is placed and rotated with the *translate* and *rotate* methods, as in the [arrows and barbs example]({{ site.baseurl }}{% post_url 2016-12-11-arrows-and-barbs %})
+* The *clearRect* method removes the isoline under the label so it can be read easily. Fortunately, *Canvas* has methods to know the text size, so the amount of space to delete is easy to get
