SVG labels and explanation done

--- a/_posts/2016-12-13-isolines.md
+++ b/_posts/2016-12-13-isolines.md
@@ -107,3 +107,76 @@ for(var j = 0; j< Math.floor(properties.getTotalLength()/separation); j++){
   * If not, sine the isoline can be split in several isolines, some large parts could be unlabeled
 * The label is placed and rotated with the *translate* and *rotate* methods, as in the [arrows and barbs example]({{ site.baseurl }}{% post_url 2016-12-11-arrows-and-barbs %})
 * The *clearRect* method removes the isoline under the label so it can be read easily. Fortunately, *Canvas* has methods to know the text size, so the amount of space to delete is easy to get
+
+### SVG
+
+In this case, the code changes a little more, and it's not as easy as it could seem. The first idea I had was to use the [stroke-dashoffset and stroke-dasharray](https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-dasharray) properties of the isolines to create the *holes* to put the labels in. The problem comes with the paths that aren't continuous (there can be more than one isoline per value).
+
+So, using the same approach as in the *Canvas* case, the important code parts are these. You can find [the whole code here]({{ site.baseurl }}/code_samples/isolines-labels-svg-page.html).
+
+{% highlight js %}
+var maskZones = svg.append("defs")
+  .append("mask")
+  .attr("id", "labelsMask")
+  .attr("x", 0)
+  .attr("y", 0)
+  .attr("width",width)
+  .attr("height", height);
+
+maskZones.append("rect")
+  .attr("x", 0)
+  .attr("y", 0)
+  .attr("width",width)
+  .attr("height", height)
+  .attr("fill", "white");
+{% endhighlight %}
+
+* Creates an [SVG mask](https://developer.mozilla.org/en-US/docs/Web/SVG/Element/mask) element with a big white rectangle occupying all the image
+  * The white zones are the ones to show at 100% of opacity
+* The id is important, since it will be used with the lines to hide the label parts
+
+{% highlight js %}
+svg.insert("path", ".streamline")
+    .datum(d)
+    .attr("d", path)
+    .attr("mask","url(#labelsMask)")
+    .style("stroke", colorScale(intervalsZ[i]))
+    .style("stroke-width", "2px")
+    .style("fill", "None");
+{% endhighlight %}
+
+* The isolines are drawn as usual with SVG, but adding the *mask* attribute
+  * Note how the *id* of the mask is used, as in a *CSS*
+
+{% highlight js %}
+for(var j = 0; j< Math.floor(properties.getTotalLength()/separation); j++){
+  var pos = properties.getPropertiesAtLength(75 + separation*j);
+  var degrees = (180/Math.PI)*Math.atan(pos.tangentY/pos.tangentX);
+
+
+  svg.append("text")
+    .attr("x", -bbox.width/2)
+    .attr("y", 7.5)
+    .attr("font-family", "Georgia")
+    .attr("font-size","15px")
+    .attr("transform", "translate("+pos.x+", "+pos.y+")rotate("+degrees+")")
+    .text(text);
+
+  maskZones.append("rect")
+  .attr("x", -2-bbox.width/2)
+  .attr("y", -8)
+  .attr("width", bbox.width+4)
+  .attr("height", bbox.height)
+  .attr("fill", "black")
+  .attr("transform", "translate("+pos.x+", "+pos.y+")rotate("+degrees+")");
+
+  }
+{% endhighlight %}
+
+* The iteration for each label is done as in the Canvas version
+* The text is added in the usual way
+  * The position only moves the text to make it centered at 0,0
+  * The transform is used to move and rotate the text at the correct positions (order is important)
+    * The *translate* part must be done this way or the *rotate* doesn't take the center of the text as the origin, putting the label at random positions
+* A black rectangle (opacity = 0) is created with the bounding box of each label and appended to the mask
+  * This is the part that actually removes the line parts to show the labels properly
